# fix-graphics-for-windows-rdp

./: README.md  notes.md  package-lock.json  package.json  reset-graphics-for-rdp_0.1.0_x64_en-US.msi  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/installer/: elevated-task.wxs
src-tauri/src/: main.rs
